Closed
Bug 1307226
Opened 8 years ago
Closed 8 years ago
clang 3.8 crashes when compiling changes from bug 1151204
Categories
(Core :: Layout, defect)
Core
Layout
Tracking
()
RESOLVED
FIXED
mozilla52
Tracking | Status | |
---|---|---|
firefox52 | --- | fixed |
People
(Reporter: keeler, Assigned: keeler)
References
Details
Attachments
(1 file)
On Fedora with clang-3.8, clang crashes when compiling with the changes from bb3080bc1aad from bug 1151204. The issue seems to be similar to one that's already worked around in that code (see https://hg.mozilla.org/mozilla-central/rev/bb3080bc1aad#l1.28 and https://hg.mozilla.org/mozilla-central/rev/bb3080bc1aad#l1.183 ). If I extend the CLANG_CRASH_BUG macro to cover 3.8 and wrap the assertion at https://hg.mozilla.org/mozilla-central/rev/bb3080bc1aad#l1.146 with the same #ifndef CLANG_CRASH_BUG, compilation succeeds.
Comment 1•8 years ago
|
||
That's odd, I'm using 3.8 myself and it compiles fine for me:
clang version 3.8.0-2ubuntu4 (tags/RELEASE_380/final)
Target: x86_64-pc-linux-gnu
What's the output from your "clang --version" ?
Flags: needinfo?(dkeeler)
![]() |
Assignee | |
Comment 2•8 years ago
|
||
Interesting - I was wondering why it seemed others hadn't encountered this and filed a bug before me...
In any case:
clang version 3.8.0 (tags/RELEASE_380/final)
Target: x86_64-unknown-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
Flags: needinfo?(dkeeler)
Comment 3•8 years ago
|
||
Weird, maybe the clang bug is still present then, but depends on some
other unknown factor which are no longer present on my system.
It sounds like you wrote a patch already, can you attach it
and ask for review please?
BTW, I see that we use g++ on mozilla-inbound so the assertions
should still be active there.
Flags: needinfo?(dkeeler)
Comment hidden (mozreview-request) |
![]() |
Assignee | |
Comment 5•8 years ago
|
||
Ok - there's the patch. I'll keep investigating, though - I'm still confused as to why it seems only I have encountered this issue.
Assignee: nobody → dkeeler
Flags: needinfo?(dkeeler)
Comment 6•8 years ago
|
||
mozreview-review |
Comment on attachment 8797283 [details]
bug 1307226 - extend clang crash workaround to work around similar crash in SetGridItemCount
https://reviewboard.mozilla.org/r/82884/#review81524
Thanks! r=mats with this nit:
Could we make the last factor there "__clang_minor__ <= 8" instead?
I see no reason why 3.7 isn't affected in the light of 3.8 crashing (for some).
That will of course disable the assertions on all 3.x up to and including 3.8,
but I think that's fine.
Attachment #8797283 -
Flags: review?(mats) → review+
Comment hidden (mozreview-request) |
![]() |
Assignee | |
Comment 9•8 years ago
|
||
Thanks!
Comment 10•8 years ago
|
||
Pushed by dkeeler@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1a4288cc3cea
extend clang crash workaround to work around similar crash in SetGridItemCount r=mats
Comment 11•8 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in
before you can comment on or make changes to this bug.
Description
•