bug 1307226 - extend clang crash workaround to work around similar crash in SetGridItemCount r=mats

MozReview-Commit-ID: 1fHN2mpYyxz